[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # Project related excludes
  | migrations
)/
'''

[tool.isort]
force_grid_wrap = 0
include_trailing_comma = true
line_length = 120
multi_line_output = 3
use_parentheses = true
skip_glob = "migrations"

[tool.poetry]
name = "mahjong-ts"
version = "0.1.0"
description = ""
authors = ["0num4 <r.oonuma@matsuri-tech.com>"]
readme = "README.md"
packages = [{include = "mahjong_ts"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
